cif/org.eclipse.escet.cif.tests/tests/simulator/unsupported/time_dep_inv.cif.err
ERROR: CIF simulator failed due to unsatisfied preconditions:

  ---------------------------------------------------
  (1/1) Variable "time" is used in a state invariant.
  ---------------------------------------------------
   * In the top-level scope of the specification:
     - invariant time < 5;
                 ^
